# .Blog

./: README.md  package-lock.json
api/: .gitignore  Cargo.toml  composer.json  nginx.conf
api-backend/: package-lock.json  package.json
api-backend/app/Models/: MyUser.php
api-backend/database/migrations/: 2025_04_08_124105_create_my_users_table.php
api-backend/routes/: api.php
api/app/Http/Controllers/: AuthController.php  PostController.php  ProfileController.php
api/app/Models/: Like.php  Posts.php  User.php
api/app/Providers/: AppServiceProvider.php
api/config/: cors.php
api/database/migrations/: 2025_04_17_051303_create_posts_table.php  2025_04_17_114810_add_blogname_users_table.php  2025_04_17_115027_create_posts_table.php  2025_05_10_092947_create_likes_table.php
api/routes/: api.php
api/src/: handlers.rs  main.rs  responses.rs  routes.rs
front/: package-lock.json  package.json
front/app/: globals.css  layout.js  page.jsx
front/app/(auth)/login/: page.js  page.jsx
front/app/(auth)/register/: page.js  page.jsx
front/app/(pages)/blog/: page.jsx
front/app/(pages)/editor/: page.jsx
front/app/(pages)/profile/: page.jsx
front/app/components/: BlogEditor.jsx  Button.jsx  Card.jsx  Editor.jsx  ModalWindow.jsx  Navigation.js  Navigation.jsx  PostCard.jsx  newButton.jsx
front/app/context/: AuthContext.js
front/app/pages/profile/: page.js
front/app/simple/: page.jsx
front/lib/: component.jsx
front/services/: api.js  utility.js
front/styles/: _variables.scss
front/utils/: formatingjson.js
testpage/: page.jsx
(+25 files in other folders)
